# start-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
ch01/: sin_fitting.py
ch02/cifar10_kaggle/: README.md  prepare_data.py  train.py
ch02/mnist_pytorch/: mnist.py
ch03/conv2d/: conv2d.py  test_conv2d.py  visualize_conv2d_features.py  visualize_conv2d_math.py
ch03/maxpool2d/: maxpool2d.py  test_maxpool2d.py  visualize_maxpool2d_features.py  visualize_maxpool2d_math.py
