[project]
name = "start-learning"
version = "0.1.0"
description = "李宏毅机器学习笔记 - 源代码"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchviz>=0.0.2",
    "graphviz>=0.20",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
